# pandoc-templates

./: .gitignore  .gitmodules  .readthedocs.yml  Pipfile  README.md  ascelike-new.md  conf.py  index.md  pyproject.toml  requirements.txt
.github/: release-drafter.yml  release.yml
.github/workflows/: cleanup-template.yml  compile-manuscript.yml  compile-templates.yml  compile.yml  docs.yml  generate-manuscript.yml  generate.yml  pages.yml  publish-pypi.yml  pytest.yaml  release-drafter.yml  template-cleanup.yml  template.yml
docs/: conf.py  examples.md  index.md  index.rst  requirements.txt  usage.md
docs/_ext/: copy_source.py
docs/versioneer/: version.py
examples/latex/ascelike-new/: example.md
latex/ascelike-new/: README.md  ascelike-new.latex  example.bib  example.tex
pandoc_templates/: version.py
pypandoctemplates/: __main__.py  pandoc.py  template.py  templates.py  version.py
pypandoctemplates/latex/ascelike-new/: ascexmpl-new.tex
templates/: README.md  ascelike-new.latex  ascelike-new.md  ascelike-new.tex  conf.toml  index.md
templates/ascelike-new/: README.md  ascelike-new.latex  ascelike-new.md
tests/: conftest.py  test_sample.py
