# pyproject.toml, for more information about configuration options, see 
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "pypandoctemplates"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
]
description = "Templates for pandoc"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/haiiliin/pandoc-templates/"
"Documentation" = "https://pypandoctemplates.readthedocs.io/"

[project.scripts]
pypandoctemplates = "pypandoctemplates.__main__:cli"

[tool.setuptools]
packages = ['pypandoctemplates']

[tool.setuptools.package-data]
pypandoctemplates = ["latex/**/*.bst", "latex/**/*.cls", "latex/**/*.latex", "latex/**/*.sty", "latex/**/*.tex"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools_scm]
root = "."
version_scheme = "post-release"
write_to = "pypandoctemplates/_version.py"
fallback_version = "0.0.1"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '(pypandoctemplates/.*\.py)'

[tool.pytest.ini_options]
testpaths = ["."]
