# pyproject.toml, for more information about configuration options, see
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "pandoc-templates"
authors = [
  { name="WANG Hailin", email="hailin.wang@connect.polyu.hk" },
]
description = "Pandoc Templates"
readme = "README.md"
dynamic = ["version", "dependencies"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/haiiliin/pandoc-templates/"
"Documentation" = "https://pandoc-templates.readthedocs.io/"
"Read the Docs" = "https://readthedocs.org/projects/pandoc-templates/"

[tool.setuptools]
packages = ["pandoc_templates"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools_scm]
root = "."
version_scheme = "post-release"
write_to = "pandoc_templates/_version.py"
fallback_version = "0.0.1"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '(pandoc_templates/.*\.py|docs/conf.py|docs/_ext/.*\.py)'
